<resources>
    <string name="app_name">Quinta</string>
    <string name="_6_upcoming_events"><![CDATA[6 upcoming events>>]]></string>
    <string name="add_person"><b>+</b> Add Person</string>
    <string name="edit"><b>+</b> Edit</string>
    <!--<string name="good_day_njacob_s">Good day,\n<font size='40'><b>Jacob S</b></font></string>   -->
    <string name="good_day_njacob_s">Good day</string>
    <string name="person_name">Jacob S</string>
    <string name="edit_person">Edit Person</string>
    <string name="discard"><b>-</b> Discard</string>
    <string name="save"><b>+</b> Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="relationship">Relationship</string>
    <string name="interests">Interests</string>
    <string name="top_three">Top three love languages: </string>
    <string name="notes">Notes</string>
    <string name="company">Company</string>
    <string name="edit_action">Edit Action</string>
    <string name="action_name">Action Name</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="recurring_frequency">Recurring Frequency</string>
    <string name="viewall">View All</string>
    <string name="upnext">Up Next: </string>
    <string name="duedate">Due Date: </string>
    <string name="upcoming_events">upcoming events</string>
    <string name="allpersons">All Persons</string>
    <string name="noevents">No Events</string>
    <string name="married_to_annie_from_hr_has_a_dog_named_scotty_likes_cricket_and_tennis_wishes_we_could_go_on_a_roadtrip">Married to Annie from HR. Has a dog named Scotty. Likes Cricket and Tennis. Wishes we could go on a roadtrip.</string>
    <string name="friend_harvard_university">Friend,Harvard University</string>
    <string name="chris_stevens">Chris Stevens</string>
    <string name="up_next_his_son_s_birthday">Up next: His Son\'s birthday</string>
    <string name="due_19_10_2021">Due: 19/10/2021</string>
    <string name="action_events">Actions &amp; Events</string>
    <string name="add_post"><b>+</b> Add</string>
    <string name="no_action_amp_events_found">No Action &amp; Events Found</string>
    <string name="buy_him_a_watch">Buy him a watch</string>
    <string name="due_21_10_2021">Due: 21/10/2021</string>
    <string name="strike_convo">Strike up a conversation</string>
    <string name="use_recent_news">Use recent news articles based on Chris\' interests</string>
    <string name="suggestions">Suggestions</string>
    <string name="search_for_articles">Search for articles</string>
    <string name="no_data">Add a person to start managing\nyour relationships.</string>
    <string name="add_action"><b>+</b> Add Action</string>
    <string name="chris">Chris</string>
    <string name="stevens">Stevens</string>
    <string name="delete"><b>-</b> Delete</string>
    <string name="whatshouldicallu">What\'s the name?</string>
    <string name="letsstart">Let\'s start</string>
    <string name="words_affirmation">Words of affirmation</string>
    <string name="acts_of_service">Acts of service</string>
    <string name="receiving_gifts">Receiving gifts</string>
    <string name="quality_time">Quality time</string>
    <string name="physical_touch">Physical touch</string>
    <string name="love_language">Top five love languages</string>
    <string name="choose">Choose 3 love languages and press done</string>
    <string name="done">Done</string>
    <string name="have_better_relationships">Have better relationships</string>
    <string name="phonecall"><b>+</b>  Phone Call</string>
    <string name="visitthem"><b>+</b>  Visit Them</string>
    <string name="gofordinner"><b>+</b>  Go for dinner</string>
    <string name="baketogether"><b>+</b>  Bake together</string>
    <string name="thankthem"><b>+</b>  Thank them</string>
    <string name="complimentthem"><b>+</b>  Compliment them</string>
    <string name="sendsong"><b>+</b>  Send a song</string>
    <string name="sendacard"><b>+</b>  Send a card</string>
    <string name="gifts">Gifts</string>
    <string name="sendflowers"><b>+</b>  Send flowers</string>
    <string name="buythemsomething"><b>+</b>  Buy them something</string>
    <string name="giftvoucher"><b>+</b>  Gift a voucher</string>
    <string name="priortize"><b>+</b>  Priortize</string>
    <string name="physical_affection"><b>+</b>  Physical affection</string>
    <string name="expresslove"><b>+</b>  Express love</string>
    <string name="specialoccasions"><b>+</b>  Special occasions</string>
    <string name="askforhelp"><b>+</b>  Ask them for help</string>
    <string name="sepcialeffor"><b>+</b>  Special effort</string>
    <string name="moreinfoonlove">For more information on love languages and other actions ideas based on the concept click below:</string>
    <string name="thefivelovelang">The 5 Love Languages</string>
    <string name="thenextsevendays">The next seven days</string>
    <string name="birthday">Birthday</string>
</resources>