<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        tools:context=".ui.main.MainActivity">

        <TextView
            android:id="@+id/welcomeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/good_day_njacob_s"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@id/personName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/person_name"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/events"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTxt" />

        <TextView
            android:id="@+id/events"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/headinglightgreen"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/_6_upcoming_events"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btnAddPerson"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personName" />

        <TextView
            android:id="@+id/btnAddPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/headingbggreen"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add_person"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/events"
            app:layout_constraintEnd_toStartOf="@id/btnViewAll"
            app:layout_constraintStart_toEndOf="@id/events"
            app:layout_constraintTop_toTopOf="@id/events" />

        <TextView
            android:id="@+id/btnViewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/headingbggreen"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/viewall"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/events"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnAddPerson"
            app:layout_constraintTop_toTopOf="@id/events" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPersons"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnViewAll"
            app:layout_constraintStart_toStartOf="@id/events"
            app:layout_constraintTop_toBottomOf="@id/events" />

        <TextView
            android:id="@+id/noData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/events" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>