<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/cardbg"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="1"
            android:text="@string/chris"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/etRelationshipCompany"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:text="@string/stevens"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/firstname"
            app:layout_constraintEnd_toStartOf="@id/btnAddAction"
            app:layout_constraintStart_toEndOf="@id/firstname"
            app:layout_constraintTop_toTopOf="@id/firstname" />

        <TextView
            android:id="@+id/btnAddAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/headingbggreen"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/add_action"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/firstname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lastname"
            app:layout_constraintTop_toTopOf="@id/firstname" />


        <TextView
            android:id="@+id/etRelationshipCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/friend_harvard_university"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/firstname"
            app:layout_constraintTop_toBottomOf="@id/firstname" />

        <TextView
            android:id="@+id/notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/friend_harvard_university"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/etRelationshipCompany"
            app:layout_constraintTop_toBottomOf="@id/etRelationshipCompany" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>