<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundcolor"
        tools:context=".ui.upcomingevents.ActivityUpComingEvents">

        <TextView
            android:id="@+id/nextseven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/thenextsevendays"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/upcomingevents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/upcomingevents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_events"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/nextseven"
            app:layout_constraintTop_toBottomOf="@id/nextseven" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllPosts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/nextseven"
            app:layout_constraintTop_toBottomOf="@id/upcomingevents"
            tools:listitem="@layout/item_all_posts" />


        <TextView
            android:id="@+id/noPosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_action_amp_events_found"
            android:textSize="13sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rvAllPosts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rvAllPosts" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>